methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:10: error: type mismatch;
 found   : java.awt.Color
 required: Null
    couleur = getCouleurSol()
                           ^